src/components/maintext/MainText.css
.team-section{
    margin-top: 140px;
    margin-bottom: 90px;
    display: flex;
    justify-content: space-between;
    max-width: 1920px;
}
.team-heading{
    display: flex;
    align-items: center;
    margin-bottom: 31px;

}
.Maintext-heading{
    font-size: 54px;
    color: #221F1F;
    padding-left: 20px;
}
.circle2 {
    background-color: #FFCA05;
    width: 50px;
    height: 50px;
    border-radius: 50%;

}
.text-side{
    max-width: 514px;
}
.maintext-info-color{
    font-size: 18px;
    padding-bottom: 40px;
    padding-top: 10px;
    color: #221F1F;
}

.team-text-content{
    width: 50%;
   padding: 97px 47px 104px 356px; 

}
.team-bg{
  width: 50%;
}
.team-bg-image{
    width: 100%;
}
.main-wrap {
    margin-top: 140px;
    margin-bottom: 90px;
    display: flex;
    justify-content: space-between;
    max-width: 1920px;
    background-color: #221F1F;
}
.color{
    color: #FFFFFF;
    font-size: 54px;
}
.color-text{
    color: #FFFFFF;
    font-size: 18px;
    padding-bottom: 40px;
    padding-top: 10px;
}

